--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -56,7 +56,7 @@ spec:
     spec:
       containers:
       - name: mysql
-        image: joindevops/mysql:v1.0
+        image: lingannaj/mysql:v1.0
         imagePullPolicy: Always
         volumeMounts:
         - name: mysql
@@ -70,4 +70,4 @@ spec:
       storageClassName: "expense-ebs"
       resources:
         requests:
-          storage: 1G
+          storage: 1Gi
